# kinect_network_pose_estimator

./: README.md
devel/: .rosinstall  setup.sh
devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h
devel/include/darknet_ros_msgs_eb/: BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h
devel/include/pose_estimator/: pipe_pose.h
devel/lib/darknet_ros/: darknet_ros
devel/lib/eb_darknet/: eb_darknet
devel/lib/pkgconfig/: cloud_segmentation.pc  darknet_ros.pc  darknet_ros_msgs.pc  darknet_ros_msgs_eb.pc  eb_darknet.pc  pose_estimator.pc
devel/lib/pose_estimator/: Pose2.txt  Pose_angled03_05.txt  Pose_deviation.txt  Pose_rett_29_04.txt  Pose_vertical.txt  Vertical_quarternions.txt  example.txt
devel/share/cloud_segmentation/cmake/: cloud_segmentationConfig.cmake
devel/share/darknet_ros/cmake/: darknet_rosConfig.cmake
src/cloud_segmentation/: CMakeLists.txt
src/cloud_segmentation/src/: cloud_seg.cpp
src/pose_estimator/: CMakeLists.txt  Vertical_quarternions.txt  package.xml  pose_estimator.cpp  pose_estimator.h
src/pose_estimator/msg/: pipe_pose.msg
src/pose_estimator/src/: cloud_processor.cpp  cloud_segmentation.cpp  kinect_network.cpp  pose_estimator.cpp  pose_estimator.h  seg_pose_estimator.cpp  seg_pose_estimator.h  testing.cpp
src/test_ws/: .catkin
(+74 files in other folders)
